# sutraworks-kernel

./: .ai-instructions.md  .gitignore  CHANGELOG.md  LICENSE  Makefile  NEXT_STEPS.md  README.md  SESSION_SUMMARY.md  SPRINT.md  TODO.md  config.txt  realtodo.md  run_log.txt
kernel/: Cargo.toml  aarch64-intent-kernel.json  benchmark_100k.txt  benchmark_10k.txt  benchmark_20k.txt  benchmark_50k.txt  benchmark_latest.txt  benchmark_output.txt  benchmark_output_clean.txt  build_errors.txt  run_test.sh  test_linker.ld
kernel/.cargo/: config.toml
kernel/docs/: IMMEDIATE_ACTION_PLAN.md  PRODUCTION_HAILO_IMPLEMENTATION_PLAN.md  PRODUCTION_ROADMAP.md
kernel/src/: benchmarks.rs  dtb.rs  lib.rs  main.rs  profiling.rs
kernel/src/apps/: demo.rs  linker.rs  manager.rs  manifest.rs  mod.rs  registry.rs
kernel/src/arch/: mod.rs  multicore.rs
kernel/src/drivers/: console.rs  ethernet.rs  framebuffer.rs  gpio.rs  hailo.rs  hailo_tensor.rs  interrupts.rs  mailbox.rs  mod.rs  pcie.rs  ramdisk.rs  rng.rs  rp1.rs  sd.rs  sdhci.rs  timer.rs  uart.rs  virtio.rs  virtio_blk.rs
kernel/src/english/: context.rs  mod.rs  parser.rs  phrases.rs  responses.rs  synonyms.rs
kernel/src/fs/: cache.rs  console.rs  fat32.rs  mod.rs  pipe.rs  ramfs.rs  tar.rs  vfs.rs
kernel/src/intent/: embeddings.rs  feedback.rs  handlers.rs  hierarchy.rs  linker.rs  manifest.rs  mod.rs  queue.rs  scheduling.rs  security.rs  temporal.rs
kernel/src/kernel/: async_core.rs  capability.rs  elf.rs  exception.rs  mod.rs  process.rs  (+5 more)
kernel/tests/: integration_tests.rs  kernel_tests.rs
tests/host/: Cargo.toml
(+127 files in other folders)
